<resources>
    <string name="app_name" translatable="false">Foodlite</string>
    <string name="tab_profile">Profil</string>
    <string name="tab_home">Ana Ekran</string>
    <string name="tab_bucket">Sepetim</string>
    <string name="tab_search">Ara</string>
    <string name="surname">Soyad:</string>
    <string name="name">Ad:</string>
    <string name="password">Şifre:</string>
    <string name="create_new_account">Yeni Hesap Oluştur</string>
    <string name="adress">Adresinizi giriniz.</string>
    <string name="adres">Adres:</string>
    <string name="user_name">Kullanıcı Adı:</string>
    <string name="enter_password">Şifrenizi girin.</string>
    <string name="your_name">Adınız</string>
    <string name="repeat_password">Şifre\'yi tekrarla:</string>
    <string name="back">BACK</string>
    <string name="r_password">Şifrenizi tekrar giriniz.</string>
    <string name="your_surname">Soyadınız.</string>
    <string name="your_username">Kullanıcı adınız.</string>
    <string name="login">Giriş Yap</string>
    <string name="or">YA DA</string>
    <string name="visitor_text">Şuan Ziyaretçi statüsündesiniz. Uygulamanın tüm imkanlarından yararlanabilmek için hesap oluşturabilir ya da var olan hesabınıza giriş yapabilirsiniz!</string>
    <string name="register">Kayıt Ol</string>
    <string name="visitor">Ziyaretçi</string>
    <string name="menu_category">Menü Kategorileri</string>
    <string name="restaurants">Restoranlar</string>
    <string name="best_menus">En İyi Menüler</string>
    <string name="ara">Ara</string>
    <string name="arama_filtreleri">Arama Filtreleri</string>
    <string name="menu">Menü</string>
    <string name="isletme">Tedarikçi</string>
    <string name="basket">Sepetim</string>
    <string name="pay">Ödeme Yap</string>
    <string name="clear_basket">Sepeti temizle</string>
    <string name="total_payment">Ödeme Tutarı :</string>
    <string name="xx">XX</string>
    <string name="order_name">sipariş adı</string>
    <string name="x1">x1</string>
    <string name="x">x</string>
    <string name="todo">TODO</string>
    <string name="edit_profile">Güncelle</string>
    <string name="your_password">Your password...</string>
    <string name="your_mail">Your mail address</string>
    <string name="e_mail">E-posta:</string>
    <string name="your_email">E-posta adresiniz.</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="save">Save</string>
    <string name="remove_from_basket">Remove</string>
    <string name="food_search">Food Search</string>
    <string name="account_created_success">Your account has been created successfully.</string>
    <string name="profile_info">Profile Info</string>
    <string name="phone_number">Phone Number:</string>
    <string name="your_phone">Your phone number.</string>
    <string name="credit_card_input">Please enter your credit card info.</string>
    <string name="credit_card_hint">Card Number...</string>
</resources>
