<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="416dp"
        android:layout_height="500dp"
        app:cardBackgroundColor="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="10dp"

            android:layout_marginTop="10dp"
            android:gravity="center|center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:drawableStart="?attr/homeAsUpIndicator"
                android:drawableTint="#FFFFFF"
                android:elevation="5dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="@string/back"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal"
                android:text="@string/profile_info"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="140dp"
                android:layout_height="31dp"
                android:layout_marginLeft="20dp"
                android:text="Email:"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/your_mail"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lblPhoneNumber"
                android:layout_width="140dp"
                android:layout_height="31dp"
                android:layout_marginLeft="20dp"
                android:text="@string/phone_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPhoneNumber"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/your_phone"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textEmailAddress"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtPassword"
                android:layout_width="140dp"
                android:layout_height="31dp"
                android:layout_marginLeft="20dp"
                android:text="@string/password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/your_password"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textPassword"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"

            android:orientation="horizontal">


            <TextView
                android:id="@+id/txtName"
                android:layout_width="85dp"
                android:layout_height="21dp"
                android:layout_marginLeft="20dp"
                android:text="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="196dp"
                android:layout_height="36dp"
                android:layout_marginLeft="80dp"
                android:background="#FFFFFF"
                android:backgroundTintMode="add"
                android:cursorVisible="false"
                android:defaultFocusHighlightEnabled="false"
                android:ems="10"
                android:hint="@string/your_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSurname"
                android:layout_width="100dp"
                android:layout_height="24dp"
                android:layout_marginLeft="20dp"
                android:text="@string/surname"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtSurname"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="65dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/your_surname"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/lblUsername"
                android:layout_width="140dp"
                android:layout_height="31dp"
                android:layout_marginLeft="20dp"
                android:text="@string/user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="25dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/your_username"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtAddress"
                android:layout_width="130dp"
                android:layout_height="26dp"
                android:layout_marginStart="20dp"
                android:text="@string/adres"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginStart="37dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/adress"
                android:inputType="textMultiLine"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#464646" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.416" />


</androidx.constraintlayout.widget.ConstraintLayout>